# duckloader

./: README.md  default.nix  duckloader.cabal  duckloader.nix
src/: DuckLoader.hs  Hello.hs  Main.hs
src/Parsing/: SteamCMD.hs  WorkshopID.hs
