cabal-version:       2.4

name:                duckloader
version:             0.0.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Cornelius Sevald-Krause
maintainer:          cornelius.sevald@protonmail.com
copyright:           2020 Cornelius Sevald-Krause

library
  exposed-modules:     Hello
  build-depends:       base ^>=4.12.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010

executable duckloader
  main-is:             Main.hs
  other-modules:       Hello
  build-depends:       base ^>=4.12.0.0, duckloader
  hs-source-dirs:      src
  default-language:    Haskell2010
