cabal-version:       2.4

name:                duckloader
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Cornelius Sevald-Krause
maintainer:          cornelius.sevald@protonmail.com
copyright:           2020 Cornelius Sevald-Krause

library
    exposed-modules:
        Parsing.WorkshopID
        Parsing.SteamCMD
        DuckLoader
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base          >=4.12.0.0 && <4.13,
        typed-process ==0.2.*,
        transformers  ==0.5.*,
        bytestring    ==0.10.*,
        directory     ==1.3.*,
        parsec        ==3.1.*,
        errors        ==2.3.*,
        path          ==0.8.*,
        mtl           ==2.2.*

executable duckloader
    main-is: Main.hs
    other-modules:
        Parsing.WorkshopID
        Parsing.SteamCMD
        DuckLoader
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base          >=4.12.0.0 && <4.13,
        typed-process ==0.2.*,
        transformers  ==0.5.*,
        bytestring    ==0.10.*,
        directory     ==1.3.*,
        parsec        ==3.1.*,
        errors        ==2.3.*,
        path          ==0.8.*,
        mtl           ==2.2.*,
        duckloader -any
